Calculo de media

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1 class="titulo">
-            Calculadora de média - Giovanni e os michis😸😺</h1>
+            Calculadora de média - Michis😽😸😺</h1>
         <p class="subtitulo">
             Descubra qual a sua média de nota de todas as provas!
         </p>
